har endret på css link tilkoblingen

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <title></title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="stilark/Stylesheet.css">
-        <link rel="stylesheet" href="stilark/menu.css">
+        <link rel="stylesheet" href="Stilark/stylesheet.css">
+        <link rel="stylesheet" href="Stilark/menu.css">
+        <link rel="stylesheet" href="Stilark/catagorier.css">
     </head>
 <body>
 <!AboutShipping--> 
