--- a/brands/brands.html
+++ b/brands/brands.html
@@ -3,7 +3,7 @@
     <head>
         <title></title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="../Stilark/Stylesheet.css">
+        <link rel="stylesheet" href="../Stilark/stylesheet.css">
         <link rel="stylesheet" href="../Stilark/menu.css">
         <link rel="stylesheet" href="../Stilark/catagorier.css">
     </head>
